package Ex_10_3;

public interface Command {
    void execute();
    void undo();
}
